<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="Alarms" Id="{3b1495bb-5bd3-450b-a17b-083265efaee0}">
    <Declaration><![CDATA[TYPE Alarms :
STRUCT
	bIsUsed				: BOOL;
	sName				: STRING; 
	bIsActive			: INT;
	bIsAcknowledged		: INT;
	uiID				: UINT;
	sAlarmText			: STRING;
	tActiveStartTime	: STRING;
	tAcknowlegedTime	: STRING;
	tClearedTime		: STRING;
	uiRepeatCount		: DINT;
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>