<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="AlarmServer" Id="{3d2cc0da-a4c3-43eb-906a-300187b5ba2d}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK AlarmServer

VAR
		AlarmData: ARRAY [0..nrAlarms] OF Alarms;
END_VAR
VAR CONSTANT
	nrAlarms : UINT := 2000;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
]]></ST>
    </Implementation>
    <Method Name="AckAlarm" Id="{3998354c-f7a9-4477-9dd1-1e1dd91ff7c6}">
      <Declaration><![CDATA[METHOD PUBLIC AckAlarm : BOOL
VAR_INPUT
	sName: STRING;
END_VAR

VAR
	i: UINT;
	actDC : T_DCTIME64;
    sAct  : STRING;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[actDC := F_GetActualDcTime64();
sAct  := DCTIME64_TO_STRING( actDC );

FOR i:=0 TO nrAlarms BY 1 DO
	
	IF (AlarmData[i].sName = sName) THEN
		AlarmData[i].bIsAcknowledged:=  TRUE;
		AlarmData[i].tAcknowlegedTime :=  sAct;
		EXIT;
	END_IF
	
END_FOR


// Always add to DB
AddToDb(AlarmData[i]);]]></ST>
      </Implementation>
    </Method>
    <Method Name="AddToDb" Id="{bacaf7d5-fbb6-464d-b066-8afef850f3b6}">
      <Declaration><![CDATA[METHOD PUBLIC AddToDb : BOOL
VAR_INPUT
		Alarm: Alarms;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="ClearAlarm" Id="{1ecd57a5-9500-4f9c-86c4-237a9ec07bd0}">
      <Declaration><![CDATA[METHOD PUBLIC ClearAlarm : BOOL
VAR_INPUT
	sName: STRING;
END_VAR
VAR
	Alarm: Alarms;
	i: UINT;
	actDC : T_DCTIME64;
    sAct  : STRING;
	
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[actDC := F_GetActualDcTime64();
sAct  := DCTIME64_TO_STRING( actDC );

Alarm.tClearedTime :=  sAct;

FOR i:=0 TO nrAlarms BY 1 DO
	
	IF (AlarmData[i].sName = sName AND 
		AlarmData[i].bIsAcknowledged = TRUE AND 
		AlarmData[i].bIsActive = FALSE) THEN
		
		// Always add to DB before removing alarm in server
		AddToDb(Alarm);
		AlarmData[i]:= Alarm;
		EXIT;
	END_IF
	
END_FOR
]]></ST>
      </Implementation>
    </Method>
    <Method Name="NewAlarm" Id="{ff3e33e4-bc96-4829-912e-fd21b8af1018}">
      <Declaration><![CDATA[METHOD PUBLIC NewAlarm : BOOL
VAR_INPUT
	sName: STRING;
	sAlarmText: STRING;	
END_VAR
VAR
	Alarm: Alarms;
	i: UINT;
	bAlarmExists : BOOL;

	actDC : T_DCTIME64;
    sAct  : STRING;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[Alarm.sName := sName;
Alarm.sAlarmText := sAlarmText; 
Alarm.bIsActive := TRUE;
Alarm.bIsUsed := TRUE;

actDC := F_GetActualDcTime64();
sAct  := DCTIME64_TO_STRING( actDC );

Alarm.tActiveStartTime :=  sAct;

FOR i:=0 TO nrAlarms BY 1 DO
	
	IF (AlarmData[i].bIsUsed = TRUE AND AlarmData[i].sName = sName) THEN
		AlarmData[i].uiRepeatCount := AlarmData[i].uiRepeatCount + 1;
		AlarmData[i].tActiveStartTime := Alarm.tActiveStartTime;
		bAlarmExists:= TRUE;
		EXIT;
	END_IF
	
END_FOR
 
IF bAlarmExists = FALSE THEN
	
	FOR i:=0 TO SIZEOF(AlarmData) - 1 BY 1 DO
		
		IF (AlarmData[i].bIsUsed = FALSE) THEN
			AlarmData[i] := Alarm;
			EXIT;	
		END_IF
		
	END_FOR
END_IF


// Always add to DB
AddToDb(Alarm);]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="AlarmServer">
      <LineId Id="21" Count="0" />
      <LineId Id="18" Count="0" />
    </LineIds>
    <LineIds Name="AlarmServer.AckAlarm">
      <LineId Id="43" Count="1" />
      <LineId Id="10" Count="0" />
      <LineId Id="33" Count="2" />
      <LineId Id="42" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="39" Count="2" />
      <LineId Id="11" Count="0" />
      <LineId Id="18" Count="2" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="AlarmServer.AddToDb">
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="AlarmServer.ClearAlarm">
      <LineId Id="58" Count="2" />
      <LineId Id="52" Count="0" />
      <LineId Id="14" Count="3" />
      <LineId Id="55" Count="2" />
      <LineId Id="53" Count="1" />
      <LineId Id="18" Count="0" />
      <LineId Id="21" Count="3" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="AlarmServer.NewAlarm">
      <LineId Id="17" Count="0" />
      <LineId Id="19" Count="2" />
      <LineId Id="95" Count="1" />
      <LineId Id="94" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="22" Count="2" />
      <LineId Id="36" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="32" Count="1" />
      <LineId Id="49" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="53" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="54" Count="2" />
      <LineId Id="58" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="51" Count="1" />
      <LineId Id="77" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="63" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>